--- a/AutosGallery/app/src/main/res/drawable/normal_buton.xml
+++ b/AutosGallery/app/src/main/res/drawable/normal_buton.xml
@@ -2,5 +2,6 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
 
     <solid android:color="#C3F0F6"></solid>
+    <gradient android:startColor="#C3F0F6" android:endColor="#587B80"></gradient>
     <corners android:radius="40dp"/>
 </shape>
