--- a/AutosGallery/app/src/main/res/layout/activity_ilanlarim.xml
+++ b/AutosGallery/app/src/main/res/layout/activity_ilanlarim.xml
@@ -4,12 +4,29 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     tools:context=".Activity.IlanlarimActivity">
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+            android:text="İLANLARIM"
+            android:textSize="20dp"
+           android:gravity="center"
+            android:background="@drawable/pressed"></TextView>
+    </LinearLayout>
 
     <ListView
         android:layout_width="match_parent"
         android:background="@drawable/listviewler"
-        android:layout_margin="10dp"
+        android:layout_marginLeft="10dp"
+        android:layout_marginTop="-8dp"
+       android:layout_marginBottom="5dp"
+        android:layout_marginRight="10dp"
         android:id="@+id/ilanlarimListView"
         android:layout_height="match_parent">
 
