--- a/AutosGallery/app/src/main/res/layout/ilanlarimlayout.xml
+++ b/AutosGallery/app/src/main/res/layout/ilanlarimlayout.xml
@@ -4,7 +4,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="horizontal"
     android:padding="20dp"
-    android:background="#747d8c"
+    android:background="@drawable/listviewler"
     app:layout_constraintCircleRadius="40dp"
     android:layout_margin="20dp"
     android:layout_height="wrap_content">
