--- a/AutosGallery/app/src/main/res/layout/activity_ilanlarim.xml
+++ b/AutosGallery/app/src/main/res/layout/activity_ilanlarim.xml
@@ -13,6 +13,7 @@
 
         <TextView
             android:layout_width="match_parent"
+            android:layout_marginTop="-5dp"
             android:layout_height="50dp"
             android:text="İLANLARIM"
             android:textSize="20dp"
