--- a/AutosGallery/app/src/main/res/layout/activity_main.xml
+++ b/AutosGallery/app/src/main/res/layout/activity_main.xml
@@ -39,7 +39,7 @@
             android:text="İLANLAR"
             android:textSize="15dp"
             android:textColor="#000"
-            android:id="@+id/satilik"
+            android:id="@+id/ilanlarButon"
             android:layout_marginTop="30dp"></Button>
         <Button
             android:layout_width="270dp"
