--- a/AutosGallery/app/src/main/res/layout/activity_ilan_detay.xml
+++ b/AutosGallery/app/src/main/res/layout/activity_ilan_detay.xml
@@ -22,7 +22,7 @@
             android:gravity="center"
             android:background="@drawable/pressed"></TextView>
 
-    <LinearLayout
+    <RelativeLayout
         android:layout_width="320dp"
         android:layout_height="220dp"
         android:layout_marginLeft="45dp"
@@ -38,13 +38,26 @@
             android:layout_height="match_parent">
 
         </androidx.viewpager.widget.ViewPager>
-    </LinearLayout>
+        <me.relex.circleindicator.CircleIndicator
+            android:layout_width="match_parent"
+            android:layout_height="40dp"
+            android:id="@+id/sliderNokta"
+            app:ci_drawable="@color/cardview_dark_background"
+            app:ci_drawable_unselected="@color/black"
+            android:layout_alignParentBottom="true">
+
+        </me.relex.circleindicator.CircleIndicator>
+
+
+    </RelativeLayout>
 
 
 
     <ScrollView
         android:layout_width="match_parent"
-        android:layout_margin="15dp"
+        android:layout_marginLeft="15dp"
+        android:layout_marginRight="15dp"
+        android:layout_marginTop="15dp"
         android:layout_below="@+id/ilanDetayslideLayout"
         android:id="@+id/ilanDetayScroll"
         android:background="@drawable/pressed2"
@@ -344,29 +357,6 @@
                     android:layout_width="0dp"
                     android:layout_weight="1"
                     android:layout_height="wrap_content"
-                    android:text="Depo Hacmi"
-                    android:textSize="20dp"
-                    android:layout_marginLeft="20dp"></TextView>
-                <TextView
-                    android:layout_width="0dp"
-                    android:layout_weight="1"
-                    android:layout_height="wrap_content"
-                    android:text="Fiyat"
-                    android:id="@+id/ilanDetayDepoHacmi"
-                    android:textSize="20dp"
-                    android:gravity="right"
-                    android:layout_marginRight="20dp"></TextView>
-
-            </LinearLayout>
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:orientation="horizontal"
-                android:layout_height="match_parent">
-                <TextView
-                    android:layout_width="0dp"
-                    android:layout_weight="1"
-                    android:layout_height="wrap_content"
                     android:text="Km"
                     android:textSize="20dp"
                     android:layout_marginLeft="20dp"></TextView>
@@ -382,7 +372,28 @@
 
             </LinearLayout>
 
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:orientation="horizontal"
+                android:layout_height="match_parent">
+                <TextView
+                    android:layout_width="0dp"
+                    android:layout_weight="1"
+                    android:layout_height="wrap_content"
+                    android:text="Depo Hacmi"
+                    android:textSize="20dp"
+                    android:layout_marginLeft="20dp"></TextView>
+                <TextView
+                    android:layout_width="0dp"
+                    android:layout_weight="1"
+                    android:layout_height="wrap_content"
+                    android:text="Fiyat"
+                    android:id="@+id/ilanDetayDepoHacmi"
+                    android:textSize="20dp"
+                    android:gravity="right"
+                    android:layout_marginRight="20dp"></TextView>
 
+            </LinearLayout>
 
 
         </LinearLayout>
