--- a/AutosGallery/app/src/main/res/layout/activity_chat.xml
+++ b/AutosGallery/app/src/main/res/layout/activity_chat.xml
@@ -6,10 +6,17 @@
     android:layout_height="match_parent"
     tools:context=".Activity.ChatActivity">
 
+    <androidx.recyclerview.widget.RecyclerView
+        android:layout_width="match_parent"
+        android:id="@+id/mesajListView"
+        android:layout_above="@+id/mesajLayout"
+        android:layout_height="match_parent"></androidx.recyclerview.widget.RecyclerView>
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
+        android:id="@+id/mesajLayout"
         android:layout_margin="8dp"
         android:orientation="horizontal">
 
