--- a/AutosGallery/app/src/main/res/layout/activity_mesajlar.xml
+++ b/AutosGallery/app/src/main/res/layout/activity_mesajlar.xml
@@ -1,16 +1,34 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".Activity.MesajlarActivity">
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:id="@+id/tool"
+        android:layout_height="wrap_content">
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_marginTop="-5dp"
+            android:layout_height="50dp"
+            android:drawableLeft="@drawable/abc_vector_test"
+            android:text="MESAJLAR"
+            android:textSize="20dp"
+            android:id="@+id/geri"
+            android:gravity="center"
+            android:background="@drawable/pressed">
+        </TextView>
+    </LinearLayout>
 
     <ListView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:layout_marginTop="80dp"
         android:id="@+id/mesajlarListView">
 
     </ListView>
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+</LinearLayout>
